# bevy.app

./: Cargo.toml
assets/models/: bot_red.glb  dagger.glb  hero_dagger.glb  idle.glb  level0.glb  level1.glb  monkey_samurai.glb  x_bot.glb
src/: animated_bundle.rs  animation.rs  app_state.rs  combat.rs  input.rs  main.rs  main_menu.rs  mouse.rs  movement.rs  movement_new.rs  nameplate.rs  orbit_camera.rs  player_camera.rs  player_ui.rs  startup.rs  ui_style.rs  window_config.rs  world3d.rs  world3d_ui.rs
src/character_controller/: mod.rs  plugin.rs
src/character_controller/systems/: cast_shape_manager.rs  floating_controller.rs  input_controller.rs  keyboard_input_controller.rs  mod.rs  rotation_controller.rs
src/combat/: attack.rs  combat_stats.rs  mod.rs
src/combat/status_effect/: mod.rs  sprint.rs  thorns.rs
src/components/: cleanup.rs  meta.rs  mod.rs
src/maps/: animated_models.rs  hello_fox.rs  hello_world.rs  mod.rs  physics_platformer.rs  rogue_world.rs
src/modules/: mod.rs
src/modules/actions/: mod.rs
src/modules/actions/jump/: mod.rs
src/modules/brain/: jump_brain.rs  mod.rs  wandering_brain.rs
src/modules/character_controller/: character_controller.rs  dash.rs  jump.rs  mod.rs  motion.rs  motion_type.rs  player_input.rs  plugin.rs  proximity_sensor.rs  utils.rs  walk.rs
src/modules/combat/: attack.rs  hitbox_bundle.rs  mod.rs
src/modules/orbit_camera/: mod.rs
src/plugins/orbit_camera/: mod.rs
src/texture/: debug.rs
src/ui/: common.rs  fps.rs  mod.rs  nameplate.rs  unitframe.rs
src/ui/unitframes/: components.rs  mod.rs
(+24 files in other folders)
